Update title in GitHub secrets configuration for clarity

--- a/configs/github_secrets_postgres_k8s.yaml
+++ b/configs/github_secrets_postgres_k8s.yaml
@@ -50,7 +50,7 @@ tools:
       destructive_hint: true
       idempotent_hint: false
       open_world_hint: true
-      title: "GitHub secret → K8s secret"
+      title: "Create secret in GitHub and K8s"
     requires_approval: true
     timeout: "1h"
     timeout_message: "approval timeout"
