Add GitHub review workflow configuration and update related README files

--- a/configs/github_secrets_postgres_k8s.yaml
+++ b/configs/github_secrets_postgres_k8s.yaml
@@ -1,5 +1,5 @@
 server:
-  name: yaml_mcp
+  name: github_secrets_postgres_k8s_mcp
   version: "0.1.0"
   transport: "http"
   shutdown_timeout: "10s"
@@ -28,7 +28,7 @@ server:
     stateless: false
 
 tools:
-  - name: yaml_mcp_create_github_secret_k8s
+  - name: github_create_env_secret_k8s
     title: "Create GitHub secret and Kubernetes secret"
     description: |
       Creates a GitHub environment secret and injects it into Kubernetes after approval.
@@ -50,7 +50,7 @@ tools:
       destructive_hint: true
       idempotent_hint: false
       open_world_hint: true
-      title: "Create secret in GitHub and K8s"
+      title: "Create GitHub env secret + K8s secret"
     requires_approval: true
     timeout: "1h"
     timeout_message: "approval timeout"
@@ -130,7 +130,7 @@ tools:
             --from-literal={{ .Args.secret_name }}="$secret_value" \\
             --dry-run=client -o yaml | kubectl apply -f -
           echo "secret {{ .Args.secret_name }} created in $repo env {{ .Args.environment }} and injected into {{ .Args.namespace }}/{{ .Args.k8s_secret_name }}"
-  - name: yaml_mcp_create_psql_db_k8s
+  - name: k8s_create_postgres_db
     title: "Create PostgreSQL database in Kubernetes"
     description: |
       Creates a PostgreSQL database after approval by reading DB credentials from Kubernetes Secrets.
