--- a/configs/github_secrets_postgres_k8s.yaml
+++ b/configs/github_secrets_postgres_k8s.yaml
@@ -105,7 +105,7 @@ tools:
         command: |
           set -euo pipefail
           repo="{{ env "YAML_MCP_GITHUB_REPO" }}"
-          if gh secret list -R "$repo" | awk '{print $1}' | grep -qx "{{ .Args.secret_name }}"; then
+          if gh secret list -R "$repo" | awk '{print $1}' | grep -qx "{{ "{{ .Args.secret_name }}" }}"; then
             echo "secret already exists"
             exit 1
           fi
@@ -120,12 +120,12 @@ tools:
         set -euo pipefail
         secret_value="$(head -c 32 /dev/urandom | base64)"
           repo="{{ env "YAML_MCP_GITHUB_REPO" }}"
-          gh api -X PUT "repos/$repo/environments/{{ .Args.environment }}" >/dev/null
-          gh secret set {{ .Args.secret_name }} -R "$repo" --env {{ .Args.environment }} --body "$secret_value"
-          kubectl -n {{ .Args.namespace }} create secret generic {{ .Args.k8s_secret_name }} \\
-            --from-literal={{ .Args.secret_name }}="$secret_value" \\
+          gh api -X PUT "repos/$repo/environments/{{ "{{ .Args.environment }}" }}" >/dev/null
+          gh secret set {{ "{{ .Args.secret_name }}" }} -R "$repo" --env {{ "{{ .Args.environment }}" }} --body "$secret_value"
+          kubectl -n {{ "{{ .Args.namespace }}" }} create secret generic {{ "{{ .Args.k8s_secret_name }}" }} \\
+            --from-literal={{ "{{ .Args.secret_name }}" }}="$secret_value" \\
             --dry-run=client -o yaml | kubectl apply -f -
-          echo "secret {{ .Args.secret_name }} created in $repo env {{ .Args.environment }} and injected into {{ .Args.namespace }}/{{ .Args.k8s_secret_name }}"
+          echo "secret {{ "{{ .Args.secret_name }}" }} created in $repo env {{ "{{ .Args.environment }}" }} and injected into {{ "{{ .Args.namespace }}" }}/{{ "{{ .Args.k8s_secret_name }}" }}"
   - name: k8s_create_postgres_db
     title: "Create PostgreSQL database in Kubernetes"
     description: |
@@ -213,18 +213,18 @@ tools:
         command: |
           set -euo pipefail
           selector="{{ envOr "YAML_MCP_POSTGRES_POD_SELECTOR" "app=postgres" }}"
-          pod="$(kubectl -n {{ .Args.namespace }} get pods -l "$selector" -o jsonpath='{.items[0].metadata.name}')"
+          pod="$(kubectl -n {{ "{{ .Args.namespace }}" }} get pods -l "$selector" -o jsonpath='{.items[0].metadata.name}')"
           if [ -z "$pod" ]; then
             echo "postgres pod not found"
             exit 1
           fi
-          pg_user="$(kubectl -n {{ .Args.namespace }} get secret {{ .Args.k8s_pg_user_secret_name }} -o jsonpath='{.data.{{ .Args.pg_user_secret_name }}}' | base64 -d)"
-          pg_password="$(kubectl -n {{ .Args.namespace }} get secret {{ .Args.k8s_pg_password_secret_name }} -o jsonpath='{.data.{{ .Args.pg_password_secret_name }}}' | base64 -d)"
+          pg_user="$(kubectl -n {{ "{{ .Args.namespace }}" }} get secret {{ "{{ .Args.k8s_pg_user_secret_name }}" }} -o jsonpath='{.data.{{ "{{ .Args.pg_user_secret_name }}" }}}' | base64 -d)"
+          pg_password="$(kubectl -n {{ "{{ .Args.namespace }}" }} get secret {{ "{{ .Args.k8s_pg_password_secret_name }}" }} -o jsonpath='{.data.{{ "{{ .Args.pg_password_secret_name }}" }}}' | base64 -d)"
           if [ -z "$pg_user" ] || [ -z "$pg_password" ]; then
             echo "postgres credentials not found"
             exit 1
           fi
-          if kubectl -n {{ .Args.namespace }} exec "$pod" -- env PGPASSWORD="$pg_password" psql -U "$pg_user" -tAc "SELECT 1 FROM pg_database WHERE datname='{{ .Args.db_name }}';" | grep -q 1; then
+          if kubectl -n {{ "{{ .Args.namespace }}" }} exec "$pod" -- env PGPASSWORD="$pg_password" psql -U "$pg_user" -tAc "SELECT 1 FROM pg_database WHERE datname='{{ "{{ .Args.db_name }}" }}';" | grep -q 1; then
             echo "database already exists"
             exit 1
           fi
@@ -238,16 +238,16 @@ tools:
       command: |
         set -euo pipefail
         selector="{{ envOr "YAML_MCP_POSTGRES_POD_SELECTOR" "app=postgres" }}"
-        pod="$(kubectl -n {{ .Args.namespace }} get pods -l "$selector" -o jsonpath='{.items[0].metadata.name}')"
+        pod="$(kubectl -n {{ "{{ .Args.namespace }}" }} get pods -l "$selector" -o jsonpath='{.items[0].metadata.name}')"
         if [ -z "$pod" ]; then
           echo "postgres pod not found"
           exit 1
         fi
-        pg_user="$(kubectl -n {{ .Args.namespace }} get secret {{ .Args.k8s_pg_user_secret_name }} -o jsonpath='{.data.{{ .Args.pg_user_secret_name }}}' | base64 -d)"
-        pg_password="$(kubectl -n {{ .Args.namespace }} get secret {{ .Args.k8s_pg_password_secret_name }} -o jsonpath='{.data.{{ .Args.pg_password_secret_name }}}' | base64 -d)"
+        pg_user="$(kubectl -n {{ "{{ .Args.namespace }}" }} get secret {{ "{{ .Args.k8s_pg_user_secret_name }}" }} -o jsonpath='{.data.{{ "{{ .Args.pg_user_secret_name }}" }}}' | base64 -d)"
+        pg_password="$(kubectl -n {{ "{{ .Args.namespace }}" }} get secret {{ "{{ .Args.k8s_pg_password_secret_name }}" }} -o jsonpath='{.data.{{ "{{ .Args.pg_password_secret_name }}" }}}' | base64 -d)"
         if [ -z "$pg_user" ] || [ -z "$pg_password" ]; then
           echo "postgres credentials not found"
           exit 1
         fi
-        kubectl -n {{ .Args.namespace }} exec "$pod" -- env PGPASSWORD="$pg_password" psql -U "$pg_user" -v ON_ERROR_STOP=1 -c "CREATE DATABASE \"{{ .Args.db_name }}\" OWNER \"$pg_user\";"
-        echo "database {{ .Args.db_name }} created in namespace {{ .Args.namespace }}"
+        kubectl -n {{ "{{ .Args.namespace }}" }} exec "$pod" -- env PGPASSWORD="$pg_password" psql -U "$pg_user" -v ON_ERROR_STOP=1 -c "CREATE DATABASE \"{{ "{{ .Args.db_name }}" }}\" OWNER \"$pg_user\";"
+        echo "database {{ "{{ .Args.db_name }}" }} created in namespace {{ "{{ .Args.namespace }}" }}"
